# genealogy-rs

./: Cargo.toml
src/: lib.rs  main.rs
tests/: simple.c
tests/cargo/: link_flags.txt
tests/cargo-windows/: out.map
tests/clang/: a.out  output.map
tests/gcc/: a.out  out.map  simple2.c
