[package]
name = "mapfile_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.4"
goblin = "0.7.1"
mapfile_parser = { version = "2.3.0", path = "../mapfile_parser" }
regex = "1.10.2"

[lib]
name = "map_extract"
path = "src/lib.rs"

[[bin]]
name = "mapfile_tester"
path = "src/main.rs"
