[package]
name = "genealogy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.7.1"
intervaltree = "0.2.7"
regex = "1.10.2"

[lib]
name = "genealogy"
path = "src/lib.rs"

[[bin]]
name = "genealogy"
path = "src/main.rs"
